# cursor-python

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.cursor/rules/: conding-convention.mdc  dev-stacks.mdc
docs/: PRD.md  Spec.md  sales.md
src/be/data/: index_components.py  stock_collector.py
src/be/data/cache/: nasdaq100_components.json  sp500_components.json
src/be/indicators/: bollinger_bands.py  macd.py  moving_averages.py  rsi.py  stochastic.py
streamlit/: app.py
tests/: __init__.py
tests/data/: __init__.py  test_index_components.py  test_stock_collector.py
tests/indicators/: __init__.py  test_bollinger_bands.py  test_macd.py  test_moving_averages.py  test_rsi.py  test_stochastic.py
