[project]
name = "stock-monitor"
version = "0.1.0"
description = ""
authors = [
    {name = "jp-kh-kim",email = "khkim@braincommerce.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "streamlit (>=1.42.2,<2.0.0)",
    "yfinance (>=0.2.54,<0.3.0)",
    "highcharts-core (>=1.10.2,<2.0.0)",
    "highcharts-stock (>=1.7.0,<2.0.0)",
    "highcharts-gantt (>=1.7.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
