[project]

name = "cursor_tutorial"
version = "0.1.0"
description = ""
authors = [
    {name = "jp-kh-kim",email = "khkim@braincommerce.com"}
]
packages = [
    { include = "be", from = "src" },
]
readme = "README.md"
requires-python = ">=3.12, <4"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "streamlit (>=1.42.2,<2.0.0)",
    "yfinance (>=0.2.54,<0.3.0)",
    "highcharts-core (>=1.10.2,<2.0.0)",
    "highcharts-stock (>=1.7.0,<2.0.0)",
    "highcharts-gantt (>=1.7.0,<2.0.0)",
    "plotly (>=6.0.0,<7.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "lxml (>=5.3.1,<6.0.0)",
    "streamlit-searchbox (>=0.1.20,<0.2.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.7"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
